--- a/Statinf/exercices-3.html
+++ b/Statinf/exercices-3.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2020-06-19" />
+<meta name="date" content="2020-08-07" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -151,7 +151,7 @@ code span.wa { color: #bf0303; } /* Warning */
 
 <li class="divider"></li>
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Overview</a><ul>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html#plan-du-cours"><i class="fa fa-check"></i>Plan du cours</a></li>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html#plan-et-déroulement-du-cours"><i class="fa fa-check"></i>Plan et déroulement du cours</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html"><i class="fa fa-check"></i>Introduction</a><ul>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html#la-démarche-statistique"><i class="fa fa-check"></i>La démarche statistique</a></li>
@@ -421,7 +421,7 @@ Tenant compte que plusieurs étudiants n'ont pas pu assister à leurs séances d
 <!-- 8-1 applied -->
 
 <div class="exercise">
-<p><span id="exr:unnamed-chunk-104" class="exercise"><strong>Exercice 4.1  </strong></span>Pour une population de loi normale de variance <span class="math inline">\(\sigma^2\)</span> connue, répondre aux questions suivantes:</p>
+<p><span id="exr:unnamed-chunk-105" class="exercise"><strong>Exercice 4.1  </strong></span>Pour une population de loi normale de variance <span class="math inline">\(\sigma^2\)</span> connue, répondre aux questions suivantes:</p>
 <ol style="list-style-type: decimal">
 <li>Quel est le niveau de confiance pour l’intervalle <span class="math inline">\(\overline{x} - 2.14 \sigma/\sqrt{n} \leq \mu \leq \overline{x} + 2.14 \sigma/\sqrt{n}\)</span> ?</li>
 <li>Quel est le niveau de confiance pour l’intervalle <span class="math inline">\(\overline{x} - 1.85 \sigma/\sqrt{n} \leq \mu \leq \overline{x} + 1.85 \sigma/\sqrt{n}\)</span> ?</li>
@@ -431,7 +431,7 @@ Tenant compte que plusieurs étudiants n'ont pas pu assister à leurs séances d
 <!-- CC1 L -->
 
 <div class="exercise">
-<p><span id="exr:unnamed-chunk-105" class="exercise"><strong>Exercice 4.2  </strong></span>Nous souhaitons estimer un intervalle de confiance du gain d’un circuit électronique<a href="#fn7" class="footnote-ref" id="fnref7"><sup>7</sup></a>.
+<p><span id="exr:unnamed-chunk-106" class="exercise"><strong>Exercice 4.2  </strong></span>Nous souhaitons estimer un intervalle de confiance du gain d’un circuit électronique<a href="#fn7" class="footnote-ref" id="fnref7"><sup>7</sup></a>.
 On admet que le gain est distribué selon une loi normale d’espérance inconnue <span class="math inline">\(m\)</span> et d’écart type <span class="math inline">\(\sigma = 20\)</span>.</p>
 <ol style="list-style-type: decimal">
 <li><p>Décrire l’expérience aléatoire, l’univers et la variable aléatoire <span class="math inline">\(X\)</span>.</p></li>
@@ -450,7 +450,7 @@ On admet que le gain est distribué selon une loi normale d’espérance inconnu
 <!-- cor 3 -->
 
 <div class="exercise">
-<p><span id="exr:unnamed-chunk-106" class="exercise"><strong>Exercice 4.3  </strong></span>Le poids de paquets de poudre de lessive, à l’issue de l’empaquetage, est
+<p><span id="exr:unnamed-chunk-107" class="exercise"><strong>Exercice 4.3  </strong></span>Le poids de paquets de poudre de lessive, à l’issue de l’empaquetage, est
 supposé suivre une loi normale <span class="math inline">\(\mathcal{N}(\mu, \sigma^2 )\)</span> dont l’écart-type <span class="math inline">\(\sigma\)</span> est supposé connu et égal à <span class="math inline">\(5 g\)</span>. <span class="math inline">\(\sigma\)</span> représente la variabilité du poids due à l’imprécision de la machine. Le poids marqué sur les paquets est de <span class="math inline">\(710 g\)</span>.
 Toutes les heures, <span class="math inline">\(10\)</span> paquets sont prélevés au hasard et pesés.
 On obtient pour une heure donnée, pour un échantillon de <span class="math inline">\(10\)</span> paquets un poids moyen de <span class="math inline">\(707g\)</span>.</p>
@@ -464,7 +464,7 @@ paquets de lessive</li>
 <!-- cor 5 -->
 
 <div class="exercise">
-<span id="exr:unnamed-chunk-107" class="exercise"><strong>Exercice 4.4  </strong></span>Dans la population française, le pourcentage d’individus dont le sang est de
+<span id="exr:unnamed-chunk-108" class="exercise"><strong>Exercice 4.4  </strong></span>Dans la population française, le pourcentage d’individus dont le sang est de
 rhésus négatif est de <span class="math inline">\(15\%\)</span>. Dans un échantillon représentatif de <span class="math inline">\(200\)</span> Basques français on
 observe que <span class="math inline">\(44\)</span> personnes sont de rhésus négatif.
 Donner un intervalle de confiance à <span class="math inline">\(99\%\)</span> de la proportion de Basques français ayant un rhésus
@@ -474,7 +474,7 @@ négatif.
 <!-- 8.35 -->
 
 <div class="exercise">
-<p><span id="exr:unnamed-chunk-108" class="exercise"><strong>Exercice 4.5  </strong></span>Le Bureau de météorologie du gouvernement australien a fourni les précipitations annuelles moyennes (en millimètres) en Australie entre 1983 et 2002 comme suit<a href="#fn8" class="footnote-ref" id="fnref8"><sup>8</sup></a></p>
+<p><span id="exr:unnamed-chunk-109" class="exercise"><strong>Exercice 4.5  </strong></span>Le Bureau de météorologie du gouvernement australien a fourni les précipitations annuelles moyennes (en millimètres) en Australie entre 1983 et 2002 comme suit<a href="#fn8" class="footnote-ref" id="fnref8"><sup>8</sup></a></p>
 <table style="width:100%;">
 <colgroup>
 <col width="10%" />
@@ -521,14 +521,14 @@ négatif.
 <!-- 8-51 applied -->
 
 <div class="exercise">
-<span id="exr:unnamed-chunk-110" class="exercise"><strong>Exercice 4.6  </strong></span>Le pourcentage de titane dans un alliage utilisé en aéronautique est mesuré sur <span class="math inline">\(51\)</span> pièces sélectionnées de manière aléatoire. Ce pourcentage suit une distribution normale de paramètres inconnus. L’écart type (corrigé) de l’échantillon est <span class="math inline">\(s = 0.37\)</span>. Construire un intervalle de confiance bilatéral à <span class="math inline">\(95\%\)</span> pour <span class="math inline">\(\sigma\)</span>.
+<span id="exr:unnamed-chunk-111" class="exercise"><strong>Exercice 4.6  </strong></span>Le pourcentage de titane dans un alliage utilisé en aéronautique est mesuré sur <span class="math inline">\(51\)</span> pièces sélectionnées de manière aléatoire. Ce pourcentage suit une distribution normale de paramètres inconnus. L’écart type (corrigé) de l’échantillon est <span class="math inline">\(s = 0.37\)</span>. Construire un intervalle de confiance bilatéral à <span class="math inline">\(95\%\)</span> pour <span class="math inline">\(\sigma\)</span>.
 </div>
 
 <!-- https://d2nchlq0f2u6vy.cloudfront.net/16/11/14/73f7e5b387fe9577ea41945983bd7287/1536d92b0a01a208f81375ac18e6e1d9/image_scan.jpg?tcb=1574787727 -->
 <!-- cor 7 -->
 
 <div class="exercise">
-<p><span id="exr:unnamed-chunk-111" class="exercise"><strong>Exercice 4.7  </strong></span>Les ampoules électriques d’un fabricant A ont une durée de vie normalement distribuée et de moyenne <span class="math inline">\(\mu_1\)</span> avec un écart-type <span class="math inline">\(\sigma_1 = 200h\)</span> et celles d’un fabricant B ont une durée de vie normalement distribuée et de moyenne <span class="math inline">\(\mu_2\)</span> avec un écart-type <span class="math inline">\(\sigma_2 = 100h\)</span>.</p>
+<p><span id="exr:unnamed-chunk-112" class="exercise"><strong>Exercice 4.7  </strong></span>Les ampoules électriques d’un fabricant A ont une durée de vie normalement distribuée et de moyenne <span class="math inline">\(\mu_1\)</span> avec un écart-type <span class="math inline">\(\sigma_1 = 200h\)</span> et celles d’un fabricant B ont une durée de vie normalement distribuée et de moyenne <span class="math inline">\(\mu_2\)</span> avec un écart-type <span class="math inline">\(\sigma_2 = 100h\)</span>.</p>
 Un échantillon de <span class="math inline">\(150\)</span> ampoules de A a donné une durée de vie moyenne de <span class="math inline">\(1400h\)</span>. Un
 échantillon de <span class="math inline">\(100\)</span> ampoules B a donné une durée de vie moyenne de <span class="math inline">\(1200h\)</span>.
 Déterminer un intervalle de confiance à <span class="math inline">\(95\%\)</span> puis à <span class="math inline">\(99 \%\)</span> de la différence des durées de vie
