--- a/Statinf/exercices-4.html
+++ b/Statinf/exercices-4.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2020-06-19" />
+<meta name="date" content="2020-08-07" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -151,7 +151,7 @@ code span.wa { color: #bf0303; } /* Warning */
 
 <li class="divider"></li>
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Overview</a><ul>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html#plan-du-cours"><i class="fa fa-check"></i>Plan du cours</a></li>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html#plan-et-déroulement-du-cours"><i class="fa fa-check"></i>Plan et déroulement du cours</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html"><i class="fa fa-check"></i>Introduction</a><ul>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html#la-démarche-statistique"><i class="fa fa-check"></i>La démarche statistique</a></li>
@@ -421,7 +421,7 @@ Tenant compte que plusieurs étudiants n'ont pas pu assister à leurs séances d
 <!-- 10 corinne -->
 
 <div class="exercise">
-<p><span id="exr:unnamed-chunk-132" class="exercise"><strong>Exercice 5.1  </strong></span>Une entreprise commercialise des pieds de lit de type boule. Pour ces pieds on utilise une
+<p><span id="exr:unnamed-chunk-133" class="exercise"><strong>Exercice 5.1  </strong></span>Une entreprise commercialise des pieds de lit de type boule. Pour ces pieds on utilise une
 bague en matière plastique de diamètre intérieur <span class="math inline">\(x\)</span>. On définit ainsi une variable aléatoire <span class="math inline">\(X\)</span> qui à chaque bague tirée au hasard dans la production, associe son diamètre intérieur <span class="math inline">\(x\)</span> mesuré en millimètres. On admet que <span class="math inline">\(X\)</span> suit la loi normale de moyenne <span class="math inline">\(\mu\)</span> et d’écart-type <span class="math inline">\(0.04\)</span>. Le fournisseur affirme que <span class="math inline">\(\mu=12.1 \, mm\)</span>.</p>
 On a un doute sur cette affirmation. On prélève un échantillon de <span class="math inline">\(64\)</span> pièces dans la livraison. Le diamètre intérieur moyen sur cet échantillon est de <span class="math inline">\(12.095\, mm\)</span>.
 Que conclure au seuil de signification de <span class="math inline">\(10\%\)</span> quant au diamètre intérieur moyen des
@@ -431,7 +431,7 @@ bagues?
 <!-- 11 corinne -->
 
 <div class="exercise">
-<p><span id="exr:unnamed-chunk-133" class="exercise"><strong>Exercice 5.2  </strong></span>Une usine fabrique des câbles. Un câble est considéré “conforme” si sa résistance à la
+<p><span id="exr:unnamed-chunk-134" class="exercise"><strong>Exercice 5.2  </strong></span>Une usine fabrique des câbles. Un câble est considéré “conforme” si sa résistance à la
 rupture est supérieure à <span class="math inline">\(3\)</span> tonnes. L’ingénieur responsable de la production voudrait
 connaître, en moyenne, la résistance à la rupture des câbles fabriqués.</p>
 <p>Il n’est, bien sûr, pas question de faire le test de rupture sur toute la production (l’usine perdrait toute sa production!). Notons <span class="math inline">\(X\)</span> la variable aléatoire correspondant à la force à exercer sur le câble pour le rompre (en tonnes). Pour cette question, on supposera que <span class="math inline">\(X \thicksim \mathcal{N}(\mu, \sigma^2)\)</span> et que la valeur de
@@ -455,7 +455,7 @@ production.</li>
 <!-- 12 corinne -->
 
 <div class="exercise">
-<p><span id="exr:unnamed-chunk-134" class="exercise"><strong>Exercice 5.3  </strong></span>On utilise une nouvelle variété de pommes de terre dans une exploitation agricole.
+<p><span id="exr:unnamed-chunk-135" class="exercise"><strong>Exercice 5.3  </strong></span>On utilise une nouvelle variété de pommes de terre dans une exploitation agricole.
 Le rendement moyen de l’ancienne variété était de <span class="math inline">\(41.5\)</span> tonnes à l’hectare.
 La nouvelle variété est cultivée sur <span class="math inline">\(100\)</span> hectares, avec un rendement moyen de <span class="math inline">\(45\)</span> tonnes à l’hectare et un écart-type (échantillonnal) de <span class="math inline">\(11.25\)</span>.</p>
 <ol style="list-style-type: decimal">
@@ -467,7 +467,7 @@ variété est supposée égal à <span class="math inline">\(44\)</span> tonnes.
 <!-- 9.61 applied -->
 
 <div class="exercise">
-<p><span id="exr:unnamed-chunk-135" class="exercise"><strong>Exercice 5.4  </strong></span>Un article dans le journal <em>Growth</em><a href="#fn14" class="footnote-ref" id="fnref14"><sup>14</sup></a> a rapporté les résultats d’une étude qui a mesuré le poids (en grammes) pour les cobayes à la naissance:</p>
+<p><span id="exr:unnamed-chunk-136" class="exercise"><strong>Exercice 5.4  </strong></span>Un article dans le journal <em>Growth</em><a href="#fn14" class="footnote-ref" id="fnref14"><sup>14</sup></a> a rapporté les résultats d’une étude qui a mesuré le poids (en grammes) pour les cobayes à la naissance:</p>
 <table style="width:99%;">
 <colgroup>
 <col width="11%" />
@@ -524,7 +524,7 @@ variété est supposée égal à <span class="math inline">\(44\)</span> tonnes.
 <!-- 8.56 applied -->
 
 <div class="exercise">
-<p><span id="exr:unnamed-chunk-137" class="exercise"><strong>Exercice 5.5  </strong></span>Un article dans un journal d’agriculture<a href="#fn15" class="footnote-ref" id="fnref15"><sup>15</sup></a> a déterminé que la composition en acides aminés essentiels (Lysine) des repas de soja sont comme indiqué ici (g/kg):</p>
+<p><span id="exr:unnamed-chunk-138" class="exercise"><strong>Exercice 5.5  </strong></span>Un article dans un journal d’agriculture<a href="#fn15" class="footnote-ref" id="fnref15"><sup>15</sup></a> a déterminé que la composition en acides aminés essentiels (Lysine) des repas de soja sont comme indiqué ici (g/kg):</p>
 <table style="width:92%;">
 <colgroup>
 <col width="9%" />
