--- a/Statinf/exercices-5.html
+++ b/Statinf/exercices-5.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2020-06-19" />
+<meta name="date" content="2020-08-07" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -151,7 +151,7 @@ code span.wa { color: #bf0303; } /* Warning */
 
 <li class="divider"></li>
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Overview</a><ul>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html#plan-du-cours"><i class="fa fa-check"></i>Plan du cours</a></li>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html#plan-et-déroulement-du-cours"><i class="fa fa-check"></i>Plan et déroulement du cours</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html"><i class="fa fa-check"></i>Introduction</a><ul>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html#la-démarche-statistique"><i class="fa fa-check"></i>La démarche statistique</a></li>
@@ -421,13 +421,13 @@ Tenant compte que plusieurs étudiants n'ont pas pu assister à leurs séances d
 <!-- 309 appliquées -->
 
 <div class="exercise">
-<span id="exr:unnamed-chunk-143" class="exercise"><strong>Exercice 6.1  </strong></span>La directrice d’une entreprise de mise en boîtes de jus d’orange désire comparer la performance de deux chaînes de mise en boîte de son usine. Comme la chaîne <span class="math inline">\(1\)</span> est relativement récente, elle pense qu’elle produit en moyenne un plus grand nombre de caisses par jour que la chaîne <span class="math inline">\(2\)</span>, plus ancienne. On considère que la loi normale est un bon modèle pour cette variable. Dix jours de production sont sélectionnés au hasard pour chaque chaîne. Selon ces données, <span class="math inline">\(\overline{x}_1=824.9\)</span> caisses par jour et <span class="math inline">\(\overline{x}_2=818.6\)</span> caisses par jour. On sait par expérience d’exploitation de ce type d’équipement que <span class="math inline">\(\sigma_1^2=40\)</span> et que <span class="math inline">\(\sigma_2^2=50\)</span>. Est-ce que la directrice peut favoriser la chaîne <span class="math inline">\(1\)</span> au seuil d’erreur <span class="math inline">\(\alpha = 5\%\)</span>?
+<span id="exr:unnamed-chunk-144" class="exercise"><strong>Exercice 6.1  </strong></span>La directrice d’une entreprise de mise en boîtes de jus d’orange désire comparer la performance de deux chaînes de mise en boîte de son usine. Comme la chaîne <span class="math inline">\(1\)</span> est relativement récente, elle pense qu’elle produit en moyenne un plus grand nombre de caisses par jour que la chaîne <span class="math inline">\(2\)</span>, plus ancienne. On considère que la loi normale est un bon modèle pour cette variable. Dix jours de production sont sélectionnés au hasard pour chaque chaîne. Selon ces données, <span class="math inline">\(\overline{x}_1=824.9\)</span> caisses par jour et <span class="math inline">\(\overline{x}_2=818.6\)</span> caisses par jour. On sait par expérience d’exploitation de ce type d’équipement que <span class="math inline">\(\sigma_1^2=40\)</span> et que <span class="math inline">\(\sigma_2^2=50\)</span>. Est-ce que la directrice peut favoriser la chaîne <span class="math inline">\(1\)</span> au seuil d’erreur <span class="math inline">\(\alpha = 5\%\)</span>?
 </div>
 
 <!-- 15 corinne -->
 
 <div class="exercise">
-<p><span id="exr:unnamed-chunk-144" class="exercise"><strong>Exercice 6.2  </strong></span>Une société de production d’électricité éolienne, cherche à comparer l’efficacité de deux types
+<p><span id="exr:unnamed-chunk-145" class="exercise"><strong>Exercice 6.2  </strong></span>Une société de production d’électricité éolienne, cherche à comparer l’efficacité de deux types
 d’éoliennes: une éolienne à deux pales (E2p) et une éolienne à trois pales (E3p). Pour ce
 faire, elle a installé sur un même parc éolien une éolienne de chaque type, et a relevé les
 puissances de chaque éolienne (en kW) toutes les 10 minutes.</p>
@@ -488,7 +488,7 @@ aléatoirement dans la base de données, et ce de façon indépendante pour chaq
 </ol>
 
 <div class="exercise">
-<span id="exr:unnamed-chunk-146" class="exercise"><strong>Exercice 6.3  </strong></span>Pour sa fabrication, un industriel utilise des machines de deux constructeurs différents.
+<span id="exr:unnamed-chunk-147" class="exercise"><strong>Exercice 6.3  </strong></span>Pour sa fabrication, un industriel utilise des machines de deux constructeurs différents.
 Après six mois d’utilisation, il constate que sur les <span class="math inline">\(80\)</span> machines du type <span class="math inline">\(A\)</span>, <span class="math inline">\(50\)</span> ne sont jamais tombées en panne, alors que pour le type <span class="math inline">\(B\)</span> la proportion est de <span class="math inline">\(40\)</span> sur <span class="math inline">\(60\)</span>. Peut-on considérer que ces deux types de machines sont équivalents au seuil d’erreur <span class="math inline">\(\alpha = 5\%\)</span>?
 </div>
 
