--- a/Statinf/index.html
+++ b/Statinf/index.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2020-06-19" />
+<meta name="date" content="2020-08-07" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -151,7 +151,7 @@ code span.wa { color: #bf0303; } /* Warning */
 
 <li class="divider"></li>
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Overview</a><ul>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html#plan-du-cours"><i class="fa fa-check"></i>Plan du cours</a></li>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html#plan-et-déroulement-du-cours"><i class="fa fa-check"></i>Plan et déroulement du cours</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html"><i class="fa fa-check"></i>Introduction</a><ul>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html#la-démarche-statistique"><i class="fa fa-check"></i>La démarche statistique</a></li>
@@ -411,19 +411,25 @@ code span.wa { color: #bf0303; } /* Warning */
 <div id="header">
 <h1 class="title">Statistique Inférentielle</h1>
 <p class="author"><em>Mohamad Ghassany</em></p>
-<p class="date"><em>2020-06-19</em></p>
+<p class="date"><em>2020-08-07</em></p>
 </div>
 <div id="overview" class="section level1 unnumbered">
 <h1>Overview</h1>
 <p>Ce document est dédié pour le cours de Statistique Inférentielle destiné aux étudiants en année 3 de l’École supérieure d’ingénieurs Léonard-de-Vinci.</p>
 <!-- ([ESILV <i class="fas  fa-external-link-alt "></i>](https://www.esilv.fr/)).  -->
-<div id="plan-du-cours" class="section level2 unnumbered">
-<h2>Plan du cours</h2>
+<div id="plan-et-déroulement-du-cours" class="section level2 unnumbered">
+<h2>Plan et déroulement du cours</h2>
 <table class="table" style="margin-left: auto; margin-right: auto;">
 <thead>
 <tr>
 <th style="text-align:left;">
 Séance
+</th>
+<th style="text-align:left;">
+Type
+</th>
+<th style="text-align:left;">
+Durée
 </th>
 <th style="text-align:left;">
 Contenu
@@ -432,19 +438,44 @@ Contenu
 </thead>
 <tbody>
 <tr>
-<td style="text-align:left;">
+<td style="text-align:left;color: darkgreen !important;">
+Cours magistral 1
+</td>
+<td style="text-align:left;color: darkgreen !important;">
+En ligne
+</td>
+<td style="text-align:left;color: darkgreen !important;">
+1.5h
+</td>
+<td style="text-align:left;color: darkgreen !important;">
+</td>
+</tr>
+<tr>
+<td style="text-align:left;color: steelblue !important;">
 Séance 1
 </td>
-<td style="text-align:left;">
+<td style="text-align:left;color: steelblue !important;">
+TD
+</td>
+<td style="text-align:left;color: steelblue !important;">
+3h
+</td>
+<td style="text-align:left;color: steelblue !important;">
 Statistique descriptive, <br>
 <strong>TP</strong> Prise en main sur R
 </td>
 </tr>
 <tr>
-<td style="text-align:left;">
+<td style="text-align:left;color: steelblue !important;">
 Séance 2
 </td>
-<td style="text-align:left;">
+<td style="text-align:left;color: steelblue !important;">
+TD
+</td>
+<td style="text-align:left;color: steelblue !important;">
+3h
+</td>
+<td style="text-align:left;color: steelblue !important;">
 Echantillonage, <br>
 Théorèmes limites, <br>
 lois des <span class="math inline">\(\overline{X}_n, S_n^2\)</span> et <span class="math inline">\(P_n\)</span>, <br>
@@ -452,84 +483,188 @@ lois des <span class="math inline">\(\overline{X}_n, S_n^2\)</span> et <span cla
 </td>
 </tr>
 <tr>
-<td style="text-align:left;">
+<td style="text-align:left;color: darkgreen !important;">
+Cours magistral 2
+</td>
+<td style="text-align:left;color: darkgreen !important;">
+En ligne
+</td>
+<td style="text-align:left;color: darkgreen !important;">
+1.5h
+</td>
+<td style="text-align:left;color: darkgreen !important;">
+</td>
+</tr>
+<tr>
+<td style="text-align:left;color: steelblue !important;">
 Séance 3
 </td>
-<td style="text-align:left;">
+<td style="text-align:left;color: steelblue !important;">
+TD
+</td>
+<td style="text-align:left;color: steelblue !important;">
+3h
+</td>
+<td style="text-align:left;color: steelblue !important;">
 Estimation ponctuelle et recherche d’estimateur, <br>
 Méthode des moments, <br>
 Méthode du maximum de vraissemblance
 </td>
 </tr>
 <tr>
-<td style="text-align:left;">
+<td style="text-align:left;color: firebrick !important;">
+Contrôle continu 1
+</td>
+<td style="text-align:left;color: firebrick !important;">
+</td>
+<td style="text-align:left;color: firebrick !important;">
+45mins
+</td>
+<td style="text-align:left;color: firebrick !important;">
+<strong>Samedi</strong> le <strong>28 novembre 2020</strong>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;color: steelblue !important;">
 Séance 4
 </td>
-<td style="text-align:left;">
+<td style="text-align:left;color: steelblue !important;">
+CAO
+</td>
+<td style="text-align:left;color: steelblue !important;">
+3h
+</td>
+<td style="text-align:left;color: steelblue !important;">
 Séance de <strong>TP</strong>: <br>
 Suite du TP sur les théorèmes limites, <br>
 TP sur l’estimation ponctuelle
 </td>
 </tr>
 <tr>
-<td style="text-align:left;">
-Contrôle continu
+<td style="text-align:left;color: darkgreen !important;">
+Cours magistral 3
 </td>
-<td style="text-align:left;">
-<strong>Samedi</strong> le <strong>30 novembre 2019</strong>
+<td style="text-align:left;color: darkgreen !important;">
+En ligne
+</td>
+<td style="text-align:left;color: darkgreen !important;">
+1.5h
+</td>
+<td style="text-align:left;color: darkgreen !important;">
 </td>
 </tr>
 <tr>
-<td style="text-align:left;">
+<td style="text-align:left;color: steelblue !important;">
 Séance 5
 </td>
-<td style="text-align:left;">
+<td style="text-align:left;color: steelblue !important;">
+TD
+</td>
+<td style="text-align:left;color: steelblue !important;">
+3h
+</td>
+<td style="text-align:left;color: steelblue !important;">
 Estimation par <strong>Intervalle de Confiance</strong>
 </td>
 </tr>
 <tr>
-<td style="text-align:left;">
+<td style="text-align:left;color: steelblue !important;">
 Séance 6
 </td>
-<td style="text-align:left;">
+<td style="text-align:left;color: steelblue !important;">
+TD
+</td>
+<td style="text-align:left;color: steelblue !important;">
+3h
+</td>
+<td style="text-align:left;color: steelblue !important;">
 Suite exercices IC et <strong>TP</strong>
 </td>
 </tr>
 <tr>
-<td style="text-align:left;">
+<td style="text-align:left;color: firebrick !important;">
+Contrôle continu 2
+</td>
+<td style="text-align:left;color: firebrick !important;">
+</td>
+<td style="text-align:left;color: firebrick !important;">
+45mins
+</td>
+<td style="text-align:left;color: firebrick !important;">
+<strong>Samedi</strong> le <strong>09 janvier 2021</strong>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;color: darkgreen !important;">
+Cours magistral 4
+</td>
+<td style="text-align:left;color: darkgreen !important;">
+En ligne
+</td>
+<td style="text-align:left;color: darkgreen !important;">
+1.5h
+</td>
+<td style="text-align:left;color: darkgreen !important;">
+</td>
+</tr>
+<tr>
+<td style="text-align:left;color: steelblue !important;">
 Séance 7
 </td>
-<td style="text-align:left;">
+<td style="text-align:left;color: steelblue !important;">
+TD
+</td>
+<td style="text-align:left;color: steelblue !important;">
+3h
+</td>
+<td style="text-align:left;color: steelblue !important;">
 Tests d’Hypothèses: <br>
 Introduction <br>
 Tests d’hypothèses à partir d’un <strong>seul</strong> échantillon
 </td>
 </tr>
 <tr>
-<td style="text-align:left;">
+<td style="text-align:left;color: steelblue !important;">
 Séance 8
 </td>
-<td style="text-align:left;">
+<td style="text-align:left;color: steelblue !important;">
+CAO
+</td>
+<td style="text-align:left;color: steelblue !important;">
+3h
+</td>
+<td style="text-align:left;color: steelblue !important;">
 Tests d’hypothèses à partir de <strong>deux</strong> échantillons, <br>
 Exercices et <strong>TP</strong>
 </td>
 </tr>
 <tr>
-<td style="text-align:left;">
+<td style="text-align:left;color: steelblue !important;">
 Séance 9
 </td>
-<td style="text-align:left;">
+<td style="text-align:left;color: steelblue !important;">
+TD
+</td>
+<td style="text-align:left;color: steelblue !important;">
+3h
+</td>
+<td style="text-align:left;color: steelblue !important;">
 Test d’ajustement de <span class="math inline">\(\chi^2\)</span>, <br>
 Test d’indépendance de <span class="math inline">\(\chi^2\)</span>, <br>
 Exercices et <strong>TP</strong>
 </td>
 </tr>
 <tr>
-<td style="text-align:left;">
+<td style="text-align:left;color: firebrick !important;">
 Examen
 </td>
-<td style="text-align:left;">
-Semaine du 20 janvier 2020
+<td style="text-align:left;color: firebrick !important;">
+</td>
+<td style="text-align:left;color: firebrick !important;">
+1.5h
+</td>
+<td style="text-align:left;color: firebrick !important;">
+<strong>Semaine</strong> du <strong>08 février 2021</strong>
 </td>
 </tr>
 </tbody>
