--- a/Statinf/tests-dhypothèses-sur-deux-échantillons.html
+++ b/Statinf/tests-dhypothèses-sur-deux-échantillons.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2020-06-19" />
+<meta name="date" content="2020-08-07" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -151,7 +151,7 @@ code span.wa { color: #bf0303; } /* Warning */
 
 <li class="divider"></li>
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Overview</a><ul>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html#plan-du-cours"><i class="fa fa-check"></i>Plan du cours</a></li>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html#plan-et-déroulement-du-cours"><i class="fa fa-check"></i>Plan et déroulement du cours</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html"><i class="fa fa-check"></i>Introduction</a><ul>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html#la-démarche-statistique"><i class="fa fa-check"></i>La démarche statistique</a></li>
@@ -454,8 +454,8 @@ F_0 = \frac{{S_1^*}^2}{{S_2^*}^2}
 de <span class="math inline">\(\chi^2\)</span> respectivement à <span class="math inline">\(n\)</span> et <span class="math inline">\(m\)</span> degrés de liberté. On dit que <span class="math inline">\(F= \frac{U/n}{V/m}\)</span> suit une loi de Fisher-Snedecor à
 <span class="math inline">\((n,m)\)</span> degrés de liberté. <span class="math inline">\(F \thicksim \mathcal{F}(n,m)\)</span></p>
 </div>
-<div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-140"></span>
-<img src="Statistique_inferentielle_files/figure-html/unnamed-chunk-140-1.png" alt="Densités de la loi de Fisher $F(n,m)$" width="80%" />
+<div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-141"></span>
+<img src="Statistique_inferentielle_files/figure-html/unnamed-chunk-141-1.png" alt="Densités de la loi de Fisher $F(n,m)$" width="80%" />
 <p class="caption">
 Figure 6.1: Densités de la loi de Fisher <span class="math inline">\(F(n,m)\)</span>
 </p>
