--- a/Statinf/tests-dhypothèses.html
+++ b/Statinf/tests-dhypothèses.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2020-06-19" />
+<meta name="date" content="2020-08-07" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -151,7 +151,7 @@ code span.wa { color: #bf0303; } /* Warning */
 
 <li class="divider"></li>
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Overview</a><ul>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html#plan-du-cours"><i class="fa fa-check"></i>Plan du cours</a></li>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html#plan-et-déroulement-du-cours"><i class="fa fa-check"></i>Plan et déroulement du cours</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html"><i class="fa fa-check"></i>Introduction</a><ul>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html#la-démarche-statistique"><i class="fa fa-check"></i>La démarche statistique</a></li>
@@ -595,7 +595,7 @@ H_{0}: \theta=\theta_{0} \text { contre } H_{1}: \theta\neq \theta_{0}
 <p>mènera au rejet de <span class="math inline">\(H_0\)</span> si et seulement si <span class="math inline">\(\theta_0\)</span> n’appartient par à l’intervalle <span class="math inline">\([L,U]\)</span>.</p>
 
 <div class="example">
-<span id="exm:unnamed-chunk-130" class="example"><strong>Exemple 5.1  </strong></span>Considérons une situation où un intervalle de confiance de niveau <span class="math inline">\(1-\alpha=0.95\)</span> pour la moyenne d’une population a été calculé à partir d’un échantillon, et où on a obtenu <span class="math inline">\([41,43]\)</span>. Comme la valeur <span class="math inline">\(40\)</span> n’appartient pas à cet intervalle, alors on sait qu’en conduisant un test d’hypothèse sur le même échantillon, l’hypothèse <span class="math inline">\(H_0 : \mu = 40\)</span> sera rejetée au seuil <span class="math inline">\(\alpha=0.05\)</span>, au profit de son alternative bilatérale.
+<span id="exm:unnamed-chunk-131" class="example"><strong>Exemple 5.1  </strong></span>Considérons une situation où un intervalle de confiance de niveau <span class="math inline">\(1-\alpha=0.95\)</span> pour la moyenne d’une population a été calculé à partir d’un échantillon, et où on a obtenu <span class="math inline">\([41,43]\)</span>. Comme la valeur <span class="math inline">\(40\)</span> n’appartient pas à cet intervalle, alors on sait qu’en conduisant un test d’hypothèse sur le même échantillon, l’hypothèse <span class="math inline">\(H_0 : \mu = 40\)</span> sera rejetée au seuil <span class="math inline">\(\alpha=0.05\)</span>, au profit de son alternative bilatérale.
 </div>
 
 </div>
