--- a/teaching/index.html
+++ b/teaching/index.html
@@ -52,7 +52,7 @@
   
 
    
-  <meta property="og:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Fall 2019-2020: Course materials . * Statistique Inférentielle. + Fall 2019-2020: Course materials . * Complément de formation Statistique. + Fall 2019-2020: Course materials . + Fall 2018-2019: - Discrete Random Variables: . - Continuous...">
+  <meta property="og:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Fall 2020-2021: Course materials . + Fall 2019-2020: Course materials . * Statistique Inférentielle. + Fall 2020-2021: Course materials . * Complément de formation Statistique. + Fall 2020-2021: Course materials . + Fall 2018-2019: -...">
   
 
 
@@ -78,7 +78,7 @@
   
 
   
-  <meta name="twitter:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Fall 2019-2020: Course materials . * Statistique Inférentielle. + Fall 2019-2020: Course materials . * Complément de formation Statistique. + Fall 2019-2020: Course materials . + Fall 2018-2019: - Discrete Random Variables: . - Continuous...">
+  <meta name="twitter:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Fall 2020-2021: Course materials . + Fall 2019-2020: Course materials . * Statistique Inférentielle. + Fall 2020-2021: Course materials . * Complément de formation Statistique. + Fall 2020-2021: Course materials . + Fall 2018-2019: -...">
   
 
   
@@ -230,18 +230,19 @@
 <ul>
   <li>Machine Learning.
     <ul>
+      <li>Fall 2020-2021: <a target="_blank" href="../MLcourse/index.html">Course materials <i class="fa fa-book" aria-hidden="true"></i></a>.</li>
       <li>Fall 2019-2020: <a target="_blank" href="../MLcourse/index.html">Course materials <i class="fa fa-book" aria-hidden="true"></i></a>.
 <!-- 	+ Spring 17-18: <a target="_blank" href="../MLcourse/index.html">Course materials <i class="fa fa-book" aria-hidden="true"></i></a>. --></li>
     </ul>
   </li>
   <li>Statistique Inférentielle.
     <ul>
-      <li>Fall 2019-2020: <a target="_blank" href="../Statinf/index.html">Course materials <i class="fa fa-book" aria-hidden="true"></i></a>.</li>
+      <li>Fall 2020-2021: <a target="_blank" href="../Statinf/index.html">Course materials <i class="fa fa-book" aria-hidden="true"></i></a>.</li>
     </ul>
   </li>
   <li>Complément de formation Statistique.
     <ul>
-      <li>Fall 2019-2020:  <a target="_blank" href="../Complement_probabilites_statistique/index.html">Course materials <i class="fa fa-book" aria-hidden="true"></i></a>.</li>
+      <li>Fall 2020-2021:  <a target="_blank" href="../Complement_probabilites_statistique/index.html">Course materials <i class="fa fa-book" aria-hidden="true"></i></a>.</li>
       <li>Fall 2018-2019:
         <ul>
           <li>Discrete Random Variables: <a target="_blank" href="../documents/Slides_VAdiscrètes_CompStat_A3_ESILV.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>.</li>
