--- a/Statinf/échantillonnage-et-théorèmes-limites.html
+++ b/Statinf/échantillonnage-et-théorèmes-limites.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2020-06-19" />
+<meta name="date" content="2020-08-07" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -151,7 +151,7 @@ code span.wa { color: #bf0303; } /* Warning */
 
 <li class="divider"></li>
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Overview</a><ul>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html#plan-du-cours"><i class="fa fa-check"></i>Plan du cours</a></li>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html#plan-et-déroulement-du-cours"><i class="fa fa-check"></i>Plan et déroulement du cours</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html"><i class="fa fa-check"></i>Introduction</a><ul>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html#la-démarche-statistique"><i class="fa fa-check"></i>La démarche statistique</a></li>
@@ -440,7 +440,7 @@ A un échantillon, on peut associer plusieurs statistiques.
 <h2><span class="header-section-number">2.2</span> La statistique <span class="math inline">\(\overline{X}_n\)</span></h2>
 
 <div class="definition">
-<span id="def:unnamed-chunk-57" class="definition"><strong>Définition 2.3  (Moyenne empirique)  </strong></span>La statistique <span class="math inline">\(\overline{X}_n\)</span> ou moyenne empirique d’un échantillon est une statistique définie par <span class="math display">\[\overline{X}_n = \frac{1}{n} \sum_{i=1}^n X_i\]</span>
+<span id="def:unnamed-chunk-58" class="definition"><strong>Définition 2.3  (Moyenne empirique)  </strong></span>La statistique <span class="math inline">\(\overline{X}_n\)</span> ou moyenne empirique d’un échantillon est une statistique définie par <span class="math display">\[\overline{X}_n = \frac{1}{n} \sum_{i=1}^n X_i\]</span>
 </div>
 
 <p><strong>Espérance et variance de <span class="math inline">\(\overline{X}_n\)</span></strong>:</p>
@@ -566,8 +566,8 @@ càd <span class="math inline">\(P\big( \lim_{n \to \infty} \overline{X}_n = m\b
 <p>Et donc l’espérance de <span class="math inline">\(X\)</span> est <span class="math inline">\(E(X)=\sum_i p_i x_i = 3.5\)</span>. Pour illustrer le théorème on va procéder à un échantillonnage. On répète le lancement du dé <span class="math inline">\(n\)</span> fois. A chaque <span class="math inline">\(n\)</span> on va calculer la moyenne empirique des résultats obtenus, qu’on va noter <span class="math inline">\(\overline{X}_n\)</span>. Selon la loi de grands nombre cette moyenne va converger vers l’espérance théorique:</p>
 <p><span class="math display">\[\overline{X}_n \rightarrow E(X)=m=3.5 \quad \text{quand} \quad n \rightarrow \infty\]</span></p>
 <p>Traçons l’évolution de la moyenne empirique en fonction de la taille <span class="math inline">\(n\)</span> de l’échantillon, dans deux différents échantillonnages aléatoires:</p>
-<div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-59"></span>
-<img src="Statistique_inferentielle_files/figure-html/unnamed-chunk-59-1.png" alt="Convergence de $\overline{X}_n$ vers $m=3.5$ pour deux différents échantillonnages" width="70%" /><img src="Statistique_inferentielle_files/figure-html/unnamed-chunk-59-2.png" alt="Convergence de $\overline{X}_n$ vers $m=3.5$ pour deux différents échantillonnages" width="70%" />
+<div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-60"></span>
+<img src="Statistique_inferentielle_files/figure-html/unnamed-chunk-60-1.png" alt="Convergence de $\overline{X}_n$ vers $m=3.5$ pour deux différents échantillonnages" width="70%" /><img src="Statistique_inferentielle_files/figure-html/unnamed-chunk-60-2.png" alt="Convergence de $\overline{X}_n$ vers $m=3.5$ pour deux différents échantillonnages" width="70%" />
 <p class="caption">
 Figure 2.2: Convergence de <span class="math inline">\(\overline{X}_n\)</span> vers <span class="math inline">\(m=3.5\)</span> pour deux différents échantillonnages
 </p>
@@ -631,7 +631,7 @@ répétitions indépendantes d’une même épreuve dont la probabilité de succ
 <h2><span class="header-section-number">2.5</span> Etude de la statistique <span class="math inline">\(S^2\)</span></h2>
 
 <div class="definition">
-<span id="def:unnamed-chunk-60" class="definition"><strong>Définition 2.4  (Variance empirique)  </strong></span>La statistique <span class="math inline">\(S_n^2\)</span> ou variance empirique d’échantillon est définie par:
+<span id="def:unnamed-chunk-61" class="definition"><strong>Définition 2.4  (Variance empirique)  </strong></span>La statistique <span class="math inline">\(S_n^2\)</span> ou variance empirique d’échantillon est définie par:
 <span class="math display">\[S_n^{2}=\frac{1}{n} \sum_{i=1}^{n}\left(X_{i}-\overline{X}_n\right)^{2}\]</span>
 </div>
 
