--- a/teaching/index.html
+++ b/teaching/index.html
@@ -231,7 +231,7 @@
   <li>Machine Learning.
     <ul>
       <li>Fall 2020-2021: <a target="_blank" href="../MLcourse/index.html">Course materials <i class="fa fa-book" aria-hidden="true"></i></a>.</li>
-      <li>Fall 2019-2020: <a target="_blank" href="../MLcourse/index.html">Course materials <i class="fa fa-book" aria-hidden="true"></i></a>.
+      <li>Fall 2019-2020: <a target="_blank" href="../MLcourse19/index.html">Course materials <i class="fa fa-book" aria-hidden="true"></i></a>.
 <!-- 	+ Spring 17-18: <a target="_blank" href="../MLcourse/index.html">Course materials <i class="fa fa-book" aria-hidden="true"></i></a>. --></li>
     </ul>
   </li>
